sfSandBoxCode/force-app/main/default/objects/Fleet_Journal_Scheduler__c/Fleet_Journal_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Fleet Journal Scheduler</label>
    <nameField>
        <displayFormat>FJS-{000}</displayFormat>
        <label>Fleet Journal Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Journal Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>