sfSandBoxCode/force-app/main/default/objects/Fleet_Journal_Scheduler__c/fields/Current_Journal__c.field-meta.xml
<CustomField>
    <fullName>Current_Journal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Journal</label>
    <type>Checkbox</type>
</CustomField>