sfSandBoxCode/force-app/main/default/objects/Fleet_Journal_Scheduler__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A look up to Journal object</description>
    <label>Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Fleet Journal Schedulers</relationshipLabel>
    <relationshipName>Fleet_Journal_Schedulers</relationshipName>
    <type>Lookup</type>
</CustomField>