sfSandBoxCode/force-app/main/default/objects/Fleet_Journal_Scheduler__c/fields/Journal_Status__c.field-meta.xml
<CustomField>
    <fullName>Journal_Status__c</fullName>
    <formula>TEXT(Journal__r.c2g__JournalStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Status</label>
    <type>Text</type>
</CustomField>