sfSandBoxCode/force-app/main/default/objects/Fleet_Journal_Scheduler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Journal__c</columns>
    <columns>Journal_Status__c</columns>
    <columns>Company__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Current_Journal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>